test/files/neg/t7757b.scala
trait Foo2
@annot2